@@ -142,7 +142,7 @@ init_gnutls(struct module *module)
 		/* FIXME: check returned values. --witekfl */
 		gnutls_certificate_set_x509_trust_file(xcred, ca_file,
 			GNUTLS_X509_FMT_PEM);
-		
+
 		gnutls_certificate_set_verify_flags(xcred,
 				GNUTLS_VERIFY_ALLOW_X509_V1_CA_CRT);
 	}
@@ -160,12 +160,26 @@ done_gnutls(struct module *module)
 static struct option_info gnutls_options[] = {
 	INIT_OPT_BOOL("connection.ssl", N_("Verify certificates"),
 		"cert_verify", 0, 0,
-		N_("Verify the peer's SSL certificate. Note that this\n"
-		"probably doesn't work properly at all with GnuTLS.")),
-/* FIXME: Better description. */
+		N_("Verify the peer's SSL certificate.  If you enable\n"
+		   "this, set also \"Trusted CA file\".")),
+
+	/* The default value of the following option points to a file
+	 * generated by the ca-certificates Debian package.  Don't use
+	 * CONFDIR here: if someone installs ELinks in $HOME and wants
+	 * to have a user-specific trust list, he or she can just
+	 * change the file name via the option manager.  Distributors
+	 * of binary packages should of course change the default to
+	 * suit their systems.
+	 * TODO: If the file name is relative, look in elinks_home?  */
 	INIT_OPT_STRING("connection.ssl", N_("Trusted CA file"),
 		"trusted_ca_file", 0, "/etc/ssl/certs/ca-certificates.crt",
-		 N_("The location of the trusted CA file.")),
+		N_("The location of a file containing certificates of\n"
+		   "trusted certification authorities in PEM format.\n"
+		   "ELinks then trusts certificates issued by these CAs.\n"
+		   "If you change this option or the file, you must\n"
+		   "restart ELinks for the changes to take effect.\n"
+		   "This option affects GnuTLS but not OpenSSL.")),
+
 	NULL_OPTION_INFO,
 };
 
